NXSEM-32: cosmit - avoid flickering during rendering by fixing the height on the image container

--- a/nuxeo-platform-semantic-entities-jsf/src/main/resources/web/nuxeo.war/css/semantic-entities.css
+++ b/nuxeo-platform-semantic-entities-jsf/src/main/resources/web/nuxeo.war/css/semantic-entities.css
@@ -1,6 +1,7 @@
 .entityOccurrences .entityDepictionSmallContainer {
   float: left;
   width: 40px;
+  height: 40px;
 }
 
 .entityOccurrences img.entityDepiction {
